--- a/src/main/resources/pages/brand_baisheng.html
+++ b/src/main/resources/pages/brand_baisheng.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="../../resources/css/dashboard.css" />
   <link rel="stylesheet" href="../css/watch.css" />
   <link rel="stylesheet" href="../css/browse_more.css" />
+  <link rel="stylesheet" href="../css/sorting.css" />
 
   <style>
     body {
@@ -30,12 +31,25 @@
 <!-- Title -->
 <h2>BAISHENG</h2>
 
+<!-- Sort By Dropdown -->
+<div class="sort-wrapper">
+  <label for="sort-select">Sort by:</label>
+  <div class="select-container">
+    <select id="sort-select">
+      <option value="default">Default</option>
+      <option value="low-high">Price: Low to High</option>
+      <option value="high-low">Price: High to Low</option>
+    </select>
+    <span class="arrow">&#9662;</span>
+  </div>
+</div>
+
 <!-- Products Grid -->
 <div class="products-grid">
   <!--MEN 3-->
   <a href="leadz/watches/men/Men-3.html?id=1" class="card-link">
     <div class="card">
-      <img src="../assets/leadz/watches/men/3/M3-4.jpg" alt="Mens Watch">
+      <img src="../assets/leadz/watches/men/3/M3-6.png" alt="Mens Watch">
       <h4>BAISHENG Gold – Stainless Steel(With Date Indicator)</h4>
       <div class="price">
         <span class="currency">LKR</span>
@@ -61,7 +75,7 @@
   <!--MEN 4-->
   <a href="leadz/watches/men/Men-4.html?id=1" class="card-link">
     <div class="card">
-      <img src="../assets/leadz/watches/men/4/M4-18.jpg" alt="Mens Watch">
+      <img src="../assets/leadz/watches/men/4/M4-19.png" alt="Mens Watch">
       <h4>BAISHENG Square Shaped Watch</h4>
       <div class="price">
         <span class="currency">LKR</span>
@@ -74,7 +88,7 @@
   <!--MEN 5-->
   <a href="leadz/watches/men/Men-5.html?id=1" class="card-link">
     <div class="card">
-      <img src="../assets/leadz/watches/men/5/M5-2.jpg" alt="Mens Watch">
+      <img src="../assets/leadz/watches/men/5/M5-6.png" alt="Mens Watch">
       <h4>Baisheng Silver-Gold-Black(With Date Indicator)</h4>
       <div class="price">
         <span class="currency">LKR</span>
@@ -87,7 +101,7 @@
   <!--MEN 6-->
   <a href="leadz/watches/men/Men-6.html?id=1" class="card-link">
     <div class="card">
-      <img src="../assets/leadz/watches/men/6/M6-4.jpg" alt="Mens Watch">
+      <img src="../assets/leadz/watches/men/6/M6-5.png" alt="Mens Watch">
       <h4>BAISHENG Unisex Watch</h4>
       <div class="price">
         <span class="currency">LKR</span>
@@ -100,7 +114,7 @@
   <!--MEN 7-->
   <a href="leadz/watches/men/Men-7.html?id=1" class="card-link">
     <div class="card">
-      <img src="../assets/leadz/watches/men/7/M7-4.jpg" alt="Mens Watch">
+      <img src="../assets/leadz/watches/men/7/M7-6.png" alt="Mens Watch">
       <h4>BAISHENG Silver Watch(With Date Indicator)</h4>
       <div class="price">
         <span class="currency">LKR</span>
@@ -126,8 +140,8 @@
   <!--MEN 9-->
   <a href="leadz/watches/men/Men-9.html?id=1" class="card-link">
     <div class="card">
-      <img src="../assets/leadz/watches/men/9/M9-1.jpg" alt="Mens Watch">
-      <h4>Elegant BAISHENG</h4>
+      <img src="../assets/leadz/watches/men/9/M9-6.png" alt="Mens Watch">
+      <h4>Elegant BAISHENG Watch</h4>
       <div class="price">
         <span class="currency">LKR</span>
         <span class="current">2,500.00</span>
@@ -152,7 +166,7 @@
   <!--WOMEN 2-->
   <a href="leadz/watches/women/Women-2.html?id=1" class="card-link">
     <div class="card">
-      <img src="../assets/leadz/watches/women/2/W2-2.jpg" alt="Womens Watch">
+      <img src="../assets/leadz/watches/women/2/W2-5.png" alt="Womens Watch">
       <h4>BAISHENG Silver – Women’s Edition</h4>
       <div class="price">
         <span class="currency">LKR</span>
@@ -172,6 +186,7 @@
   </a>
 </div>
 
+<script src="../js/sorting.js"></script>
 
 <script>
   document.addEventListener('DOMContentLoaded', () => {
