--- a/src/main/resources/pages/brands.html
+++ b/src/main/resources/pages/brands.html
@@ -35,7 +35,7 @@
   <!--BAISHENG-->
   <a href="../../resources/pages/brand_baisheng.html?id=1" class="card-link">
     <div class="card">
-      <img src="../assets/leadz/watches/Baisheng/Baisheng%201.webp" alt="Bundle">
+      <img src="../assets/imgs/Baisheng%202.png" alt="Watch">
       <h4>BAISHENG</h4>
     </div>
   </a>
@@ -43,7 +43,7 @@
   <!--NAVIFORCE-->
   <a href="../../resources/pages/brand_naviforce.html?id=1" class="card-link">
     <div class="card">
-      <img src="../assets/imgs/naviforce.jpg" alt="Bundle">
+      <img src="../assets/imgs/naviforce.jpg" alt="Watch">
       <h4>NAVIFORCE</h4>
     </div>
   </a>
@@ -51,7 +51,7 @@
   <!--HERYI-->
   <a href="../../resources/pages/brand_heryi.html?id=1" class="card-link">
     <div class="card">
-      <img src="../assets/leadz/watches/women/1/W1-5.jpg" alt="Bundle">
+      <img src="../assets/imgs/heryi%202.png" alt="Watch">
       <h4>HERYI</h4>
     </div>
   </a>
@@ -59,7 +59,7 @@
   <!--CASIO-->
   <a href="../../resources/pages/brand_casio.html?id=1" class="card-link">
     <div class="card">
-      <img src="../assets/imgs/casio.jpg" alt="Bundle">
+      <img src="../assets/imgs/casio%202.png" alt="Watch">
       <h4>CASIO</h4>
     </div>
   </a>
@@ -67,7 +67,7 @@
   <!--TITAN-->
   <a href="../../resources/pages/brand_titan.html?id=1" class="card-link">
     <div class="card">
-      <img src="../assets/imgs/titan.webp" alt="Bundle">
+      <img src="../assets/imgs/titan%202.png" alt="Watch">
       <h4>TITAN</h4>
     </div>
   </a>
