--- a/src/main/resources/pages/dashboard.html
+++ b/src/main/resources/pages/dashboard.html
@@ -34,6 +34,7 @@
       color: white;
     }
 
+
   </style>
 
 </head>
@@ -49,7 +50,7 @@
      class="featured-link featured-watch-item">
     <div class="featured-watch">
       <div class="featured-image">
-        <img src="src/main/resources/assets/leadz/watches/men/4/M4-18.jpg" alt="Watch 2">
+        <img src="src/main/resources/assets/leadz/watches/men/4/M4-19.png" alt="Watch 2">
       </div>
       <div class="featured-details">
         <h4>BAISHENG Square Shaped Watch</h4>
@@ -71,6 +72,19 @@
 
 <!------------------------------------------------------------------------------------------------------------------------>
 <!------------------------------------------------------------------------------------------------------------------------>
+<div class="sort-wrapper">
+  <label for="sort-select">Sort by:</label>
+  <div class="select-container">
+    <select id="sort-select">
+      <option value="default">Default</option>
+      <option value="low-high">Price: Low to High</option>
+      <option value="high-low">Price: High to Low</option>
+    </select>
+    <span class="arrow">&#9662;</span> <!-- Unicode ▼ -->
+  </div>
+</div>
+
+
 
 <!-- Products Grid -->
 <div class="products-grid">
@@ -78,7 +92,7 @@
   <!--MEN 1-->
   <a href="src/main/resources/pages/leadz/watches/men/Men-1.html?id=1" class="card-link">
     <div class="card">
-      <img src="src/main/resources/assets/leadz/watches/men/1/M1-5.jpg" alt="Mens Watch">
+      <img src="src/main/resources/assets/leadz/watches/men/1/M1-6.png" alt="Mens Watch">
       <h4>CAITES Watch</h4>
       <div class="price">
         <span class="currency">LKR</span>
@@ -104,7 +118,7 @@
   <!--MEN 3-->
   <a href="src/main/resources/pages/leadz/watches/men/Men-3.html?id=1" class="card-link">
     <div class="card">
-      <img src="src/main/resources/assets/leadz/watches/men/3/M3-4.jpg" alt="Mens Watch">
+      <img src="src/main/resources/assets/leadz/watches/men/3/M3-6.png" alt="Mens Watch">
       <h4>BAISHENG Gold – Stainless Steel(With Date Indicator)</h4>
       <div class="price">
         <span class="currency">LKR</span>
@@ -130,7 +144,7 @@
   <!--MEN 4-->
   <a href="src/main/resources/pages/leadz/watches/men/Men-4.html?id=1" class="card-link">
     <div class="card">
-      <img src="src/main/resources/assets/leadz/watches/men/4/M4-18.jpg" alt="Mens Watch">
+      <img src="src/main/resources/assets/leadz/watches/men/4/M4-19.png" alt="Mens Watch">
       <h4>BAISHENG Square Shaped Watch</h4>
       <div class="price">
         <span class="currency">LKR</span>
@@ -144,7 +158,7 @@
   <a href="src/main/resources/pages/leadz/watches/women/Women-1.html?id=1" class="card-link">
     <div class="card">
       <img src="src/main/resources/assets/leadz/watches/women/1/W1-15.jpg" alt="Womens  Watch">
-      <h4>HERYI Ladies Watch (Free Box)</h4>
+      <h4>HERYI Ladies Watch</h4>
       <div class="price">
         <span class="currency">LKR</span>
         <span class="current">3,500.00</span>
@@ -156,7 +170,7 @@
   <!--MEN 5-->
   <a href="src/main/resources/pages/leadz/watches/men/Men-5.html?id=1" class="card-link">
     <div class="card">
-      <img src="src/main/resources/assets/leadz/watches/men/5/M5-2.jpg" alt="Mens Watch">
+      <img src="src/main/resources/assets/leadz/watches/men/5/M5-6.png" alt="Mens Watch">
       <h4>Baisheng Silver-Gold-Black(With Date Indicator)</h4>
       <div class="price">
         <span class="currency">LKR</span>
@@ -169,7 +183,7 @@
   <!--MEN 6-->
   <a href="src/main/resources/pages/leadz/watches/men/Men-6.html?id=1" class="card-link">
     <div class="card">
-      <img src="src/main/resources/assets/leadz/watches/men/6/M6-4.jpg" alt="Mens Watch">
+      <img src="src/main/resources/assets/leadz/watches/men/6/M6-5.png" alt="Mens Watch">
       <h4>BAISHENG Unisex Watch</h4>
       <div class="price">
         <span class="currency">LKR</span>
@@ -182,7 +196,7 @@
   <!--MEN 7-->
   <a href="src/main/resources/pages/leadz/watches/men/Men-7.html?id=1" class="card-link">
     <div class="card">
-      <img src="src/main/resources/assets/leadz/watches/men/7/M7-4.jpg" alt="Mens Watch">
+      <img src="src/main/resources/assets/leadz/watches/men/7/M7-6.png" alt="Mens Watch">
       <h4>BAISHENG Silver Watch(With Date Indicator)</h4>
       <div class="price">
         <span class="currency">LKR</span>
@@ -208,8 +222,8 @@
   <!--MEN 9-->
   <a href="src/main/resources/pages/leadz/watches/men/Men-9.html?id=1" class="card-link">
     <div class="card">
-      <img src="src/main/resources/assets/leadz/watches/men/9/M9-1.jpg" alt="Mens Watch">
-      <h4>Elegant BAISHENG</h4>
+      <img src="src/main/resources/assets/leadz/watches/men/9/M9-6.png" alt="Mens Watch">
+      <h4>Elegant BAISHENG Watch</h4>
       <div class="price">
         <span class="currency">LKR</span>
         <span class="current">2,500.00</span>
@@ -234,7 +248,7 @@
   <!--MEN 11-->
   <a href="src/main/resources/pages/leadz/watches/men/Men-11.html?id=1" class="card-link">
     <div class="card">
-      <img src="src/main/resources/assets/leadz/watches/men/11/M11-4.jpg" alt="Mens Watch">
+      <img src="src/main/resources/assets/leadz/watches/men/11/M11-6.png" alt="Mens Watch">
       <h4>CASIO Watch</h4>
       <div class="price">
         <span class="currency">LKR</span>
@@ -247,7 +261,7 @@
   <!--WOMEN 2-->
   <a href="src/main/resources/pages/leadz/watches/women/Women-2.html?id=1" class="card-link">
     <div class="card">
-      <img src="src/main/resources/assets/leadz/watches/women/2/W2-2.jpg" alt="Womens Watch">
+      <img src="src/main/resources/assets/leadz/watches/women/2/W2-5.png" alt="Womens Watch">
       <h4>BAISHENG Silver – Women’s Edition</h4>
       <div class="price">
         <span class="currency">LKR</span>
@@ -418,6 +432,35 @@
     </div>
   </a>
 
+  <!------------------------------------------------------------------------------------------------------------------------>
+  <!------------------------------------------------------------------------------------------------------------------------>
+
+  <!--WOMEN 7-->
+  <a href="src/main/resources/pages/leadz/watches/women/Women-7.html?id=1" class="card-link">
+    <div class="card">
+      <img src="src/main/resources/assets/leadz/watches/women/7/W7-5.jpg" alt="Womens Watch">
+      <h4>HERYI LADIES Watch</h4>
+      <div class="price">
+        <span class="currency">LKR</span>
+        <span class="current">3,500.00</span>
+        <span class="original">4,600.00</span>
+      </div>
+    </div>
+  </a>
+
+  <!--WOMEN 8-->
+  <a href="src/main/resources/pages/leadz/watches/women/Women-8.html?id=1" class="card-link">
+    <div class="card">
+      <img src="src/main/resources/assets/leadz/watches/women/8/W8-5.jpg" alt="Womens Watch">
+      <h4>CITIZEN LADIES Watch</h4>
+      <div class="price">
+        <span class="currency">LKR</span>
+        <span class="current">3,500.00</span>
+        <span class="original">5,500.00</span>
+      </div>
+    </div>
+  </a>
+
 </div>
 
 
@@ -502,11 +545,12 @@
 <!------------------------------------------------------------------------------------------------------------------------>
 <!------------------------------------------------------------------------------------------------------------------------>
 
+<!--
 <h2>Accessories</h2>
 
-<!-- Products Grid -->
+&lt;!&ndash; Products Grid &ndash;&gt;
 <div class="products-grid">
-  <!--ACCESSORY 1-->
+  &lt;!&ndash;ACCESSORY 1&ndash;&gt;
   <a href="src/main/resources/pages/temu/accessories/Accessory-1.html?id=1" class="card-link">
     <div class="card">
       <img src="src/main/resources/assets/temu/accessories/1/accessory 1 - 1.webp" alt="Watch">
@@ -519,7 +563,7 @@
     </div>
   </a>
 
-  <!--ACCESSORY 2-->
+  &lt;!&ndash;ACCESSORY 2&ndash;&gt;
   <a href="src/main/resources/pages/temu/accessories/Accessory-2.html?id=1" class="card-link">
     <div class="card">
       <img src="src/main/resources/assets/temu/accessories/2/accessory 2 - 1.webp" alt="Watch">
@@ -532,7 +576,7 @@
     </div>
   </a>
 
-  <!--ACCESSORY 3-->
+  &lt;!&ndash;ACCESSORY 3&ndash;&gt;
   <a href="src/main/resources/pages/temu/accessories/Accessory-3.html?id=1" class="card-link">
     <div class="card">
       <img src="src/main/resources/assets/temu/accessories/3/accessory 3 - 2.webp" alt="Watch">
@@ -552,7 +596,7 @@
 </div>
 
 
-<hr class="section-divider">
+<hr class="section-divider">-->
 
 <!------------------------------------------------------------------------------------------------------------------------>
 <!------------------------------------------------------------------------------------------------------------------------>
@@ -605,12 +649,12 @@
 -->
 
   <!-- ACCESSORY -->
-  <a href="src/main/resources/pages/accessories.html?id=1" class="category-card-link">
+  <!--<a href="src/main/resources/pages/accessories.html?id=1" class="category-card-link">
     <div class="category-card">
       <img src="src/main/resources/assets/imgs/accessory 1.webp" alt="Accessories">
       <h4>Accessories</h4>
     </div>
-  </a>
+  </a>-->
 
   <!-- BOXES -->
   <a href="src/main/resources/pages/cases.html?id=1" class="category-card-link">
@@ -629,6 +673,30 @@
   </a>-->
 </div>
 
+<script>
+  const sortSelect = document.getElementById("sort-select");
+  const grid = document.querySelector(".products-grid");
+
+  sortSelect.addEventListener("change", () => {
+    const items = Array.from(grid.querySelectorAll(".card-link"));
+    const sortType = sortSelect.value;
+
+    if (sortType === "default") {
+      location.reload(); // Reload page to reset
+      return;
+    }
+
+    items.sort((a, b) => {
+      const priceA = parseFloat(a.querySelector(".current").textContent.replace(/,/g, ''));
+      const priceB = parseFloat(b.querySelector(".current").textContent.replace(/,/g, ''));
+      return sortType === "low-high" ? priceA - priceB : priceB - priceA;
+    });
+
+    // Clear and re-append sorted cards
+    grid.innerHTML = "";
+    items.forEach(item => grid.appendChild(item));
+  });
+</script>
 
 </body>
 </html>
