--- a/src/main/resources/pages/leadz/watches/men/Men-11.html
+++ b/src/main/resources/pages/leadz/watches/men/Men-11.html
@@ -23,7 +23,7 @@
 
     <!-- Thumbnails -->
     <div class="thumbs" id="thumbs">
-        <img src="../../../../assets/leadz/watches/men/11/M11-4.jpg" alt="Watch 11" class="active" />
+        <img src="../../../../assets/leadz/watches/men/11/M11-6.png" alt="Watch 11" class="active" />
         <img src="../../../../assets/leadz/watches/men/11/M11-5.jpg" alt="Watch 11" />
         <img src="../../../../assets/leadz/watches/men/11/M11-3.jpg" alt="Watch 11" />
         <img src="../../../../assets/leadz/watches/men/11/M11-1.jpg" alt="Watch 11" />
@@ -34,7 +34,7 @@
     <!-- Main Image with Arrows -->
     <div>
         <div style="position: relative;">
-            <img id="mainImage" src="../../../../assets/leadz/watches/men/11/M11-4.jpg" alt="Main Watch" class="main-image" />
+            <img id="mainImage" src="../../../../assets/leadz/watches/men/11/M11-6.png" alt="Main Watch" class="main-image" />
             <button id="prevBtn" class="arrow-btn left">‹</button>
             <button id="nextBtn" class="arrow-btn right">›</button>
 
