--- a/src/main/resources/pages/brand_naviforce.html
+++ b/src/main/resources/pages/brand_naviforce.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../../resources/css/dashboard.css" />
     <link rel="stylesheet" href="../css/watch.css" />
     <link rel="stylesheet" href="../css/browse_more.css" />
+    <link rel="stylesheet" href="../css/sorting.css" />
 
     <style>
         body {
@@ -29,6 +30,19 @@
 
 <!-- Title -->
 <h2>NAVIFORCE</h2>
+
+<!-- Sort By Dropdown -->
+<div class="sort-wrapper">
+    <label for="sort-select">Sort by:</label>
+    <div class="select-container">
+        <select id="sort-select">
+            <option value="default">Default</option>
+            <option value="low-high">Price: Low to High</option>
+            <option value="high-low">Price: High to Low</option>
+        </select>
+        <span class="arrow">&#9662;</span>
+    </div>
+</div>
 
 <!-- Products Grid -->
 <div class="products-grid">
@@ -160,6 +174,7 @@
     </a>
 </div>
 
+<script src="../js/sorting.js"></script>
 
 <script>
     document.addEventListener('DOMContentLoaded', () => {
