--- a/src/main/resources/pages/leadz/watches/men/Men-5.html
+++ b/src/main/resources/pages/leadz/watches/men/Men-5.html
@@ -23,11 +23,11 @@
 
     <!-- Thumbnails -->
     <div class="thumbs" id="thumbs">
-        <img src="../../../../assets/leadz/watches/men/5/M5-2.jpg" alt="Watch 5" class="active" />
+        <img src="../../../../assets/leadz/watches/men/5/M5-6.png" alt="Watch 5" class="active" />
+        <img src="../../../../assets/leadz/watches/men/5/M5-2.jpg" alt="Watch 5" />
         <img src="../../../../assets/leadz/watches/men/5/M5-5.jpg" alt="Watch 5" />
         <img src="../../../../assets/leadz/watches/men/5/M5-1.jpg" alt="Watch 5" />
         <img src="../../../../assets/leadz/watches/men/5/M5-3.jpg" alt="Watch 5" />
-        <img src="../../../../assets/leadz/watches/men/5/M5-4.jpg" alt="Watch 5" />
         <img src="../../../../assets/leadz/watches/Baisheng/Baisheng-Label.jpg" alt="Watch 5" />
 
     </div>
@@ -35,7 +35,7 @@
     <!-- Main Image with Arrows -->
     <div>
         <div style="position: relative;">
-            <img id="mainImage" src="../../../../assets/leadz/watches/men/5/M5-2.jpg" alt="Main Watch" class="main-image" />
+            <img id="mainImage" src="../../../../assets/leadz/watches/men/5/M5-6.png" alt="Main Watch" class="main-image" />
             <button id="prevBtn" class="arrow-btn left">‹</button>
             <button id="nextBtn" class="arrow-btn right">›</button>
 
