--- a/src/main/resources/pages/leadz/watches/women/Women-1.html
+++ b/src/main/resources/pages/leadz/watches/women/Women-1.html
@@ -25,20 +25,14 @@
     <div class="thumbs" id="thumbs">
         <img src="../../../../assets/leadz/watches/women/1/W1-15.jpg" alt="Watch 1" class="active" />
         <img src="../../../../assets/leadz/watches/women/1/W1-1.jpg" alt="Watch 1" />
+        <img src="../../../../assets/leadz/watches/women/1/W1-16.png" alt="Watch 1" />
         <img src="../../../../assets/leadz/watches/women/1/W1-2.jpg" alt="Watch 1" />
         <img src="../../../../assets/leadz/watches/women/1/W1-13.jpg" alt="Watch 1" />
         <img src="../../../../assets/leadz/watches/women/1/W1-14.jpg" alt="Watch 1" />
+        <img src="../../../../assets/leadz/watches/women/1/W1-17.png" alt="Watch 1" />
         <img src="../../../../assets/leadz/watches/women/1/W1-15.jpg" alt="Watch 1" />
         <img src="../../../../assets/leadz/watches/women/1/W1-3.jpg" alt="Watch 1" />
-        <img src="../../../../assets/leadz/watches/women/1/W1-4.jpg" alt="Watch 1" />
-        <img src="../../../../assets/leadz/watches/women/1/W1-5.jpg" alt="Watch 1" />
-        <img src="../../../../assets/leadz/watches/women/1/W1-6.jpg" alt="Watch 1" />
-        <img src="../../../../assets/leadz/watches/women/1/W1-7.jpg" alt="Watch 1" />
-        <img src="../../../../assets/leadz/watches/women/1/W1-8.jpg" alt="Watch 1" />
-        <img src="../../../../assets/leadz/watches/women/1/W1-9.jpg" alt="Watch 1" />
-        <img src="../../../../assets/leadz/watches/women/1/W1-10.jpg" alt="Watch 1" />
-        <img src="../../../../assets/leadz/watches/women/1/W1-11.jpg" alt="Watch 1" />
-        <img src="../../../../assets/leadz/watches/women/1/W1-12.jpg" alt="Watch 1" />
+
 
     </div>
 
@@ -54,7 +48,7 @@
 
     <!-- Product Details -->
     <div class="details">
-        <h1 class="title">HERYI Ladies Watch (Free Box)</h1>
+        <h1 class="title">HERYI Ladies Watch</h1>
 
         <div class="price-section">
             <div id="price">LKR 3,500.00</div>
