--- a/src/main/resources/pages/leadz/watches/women/Women-2.html
+++ b/src/main/resources/pages/leadz/watches/women/Women-2.html
@@ -23,17 +23,18 @@
 
     <!-- Thumbnails -->
     <div class="thumbs" id="thumbs">
-        <img src="../../../../assets/leadz/watches/women/2/W2-2.jpg" alt="Watch 2" class="active" />
+        <img src="../../../../assets/leadz/watches/women/2/W2-5.png" alt="Watch 2" class="active" />
         <img src="../../../../assets/leadz/watches/women/2/W2-4.jpg" alt="Watch 2" />
         <img src="../../../../assets/leadz/watches/women/2/W2-1.jpg" alt="Watch 2" />
         <img src="../../../../assets/leadz/watches/women/2/W2-3.jpg" alt="Watch 2" />
+        <img src="../../../../assets/leadz/watches/women/2/W2-2.jpg" alt="Watch 2" />
         <img src="../../../../assets/leadz/watches/Baisheng/Baisheng-Label.jpg" alt="Watch 2" />
     </div>
 
     <!-- Main Image with Arrows -->
     <div>
         <div style="position: relative;">
-            <img id="mainImage" src="../../../../assets/leadz/watches/women/2/W2-2.jpg" alt="Main Watch" class="main-image" />
+            <img id="mainImage" src="../../../../assets/leadz/watches/women/2/W2-5.png" alt="Main Watch" class="main-image" />
             <button id="prevBtn" class="arrow-btn left">‹</button>
             <button id="nextBtn" class="arrow-btn right">›</button>
 
@@ -58,7 +59,7 @@
         <!-- Color Options with Price -->
         <div class="colors" id="colors">
             <div class="color-option selected" data-price="1,500" data-original="2500.00">
-                <img src="../../../../assets/leadz/watches/women/2/W2-2.jpg" alt="Watch" />
+                <img src="../../../../assets/leadz/watches/women/2/W2-5.png" alt="Watch" />
                 <div class="color-label">Silver</div>
             </div>
         </div>
