--- a/src/main/resources/pages/leadz/watches/men/Men-1.html
+++ b/src/main/resources/pages/leadz/watches/men/Men-1.html
@@ -24,10 +24,16 @@
     <!-- Thumbnails -->
     <div class="thumbs" id="thumbs">
         <img src="../../../../assets/leadz/watches/men/1/M1-5.jpg" alt="Watch 1" class="active" />
+        <img src="../../../../assets/leadz/watches/men/1/M1-9.jpg" alt="Watch 1" />
         <img src="../../../../assets/leadz/watches/men/1/M1-2.jpg" alt="Watch 1" />
         <img src="../../../../assets/leadz/watches/men/1/M1-3.jpg" alt="Watch 1" />
+        <img src="../../../../assets/leadz/watches/men/1/M1-7.jpg" alt="Watch 1" />
+        <img src="../../../../assets/leadz/watches/men/1/M1-10.jpg" alt="Watch 1" />
         <img src="../../../../assets/leadz/watches/men/1/M1-4.jpg" alt="Watch 1" />
         <img src="../../../../assets/leadz/watches/men/1/M1-1.jpg" alt="Watch 1" />
+        <img src="../../../../assets/leadz/watches/men/1/M1-8.jpg" alt="Watch 1" />
+
+
     </div>
 
     <!-- Main Image with Arrows -->
@@ -62,7 +68,7 @@
                 <div class="color-label">Brown</div>
             </div>
             <div class="color-option" data-price="1,200" data-original="2350.00">
-                <img src="../../../../assets/leadz/watches/men/1/M1-5.jpg" alt="Watch" />
+                <img src="../../../../assets/leadz/watches/men/1/M1-8.jpg" alt="Watch" />
                 <div class="color-label">Black</div>
             </div>
         </div>
