--- a/src/main/resources/pages/leadz/watches/women/Women-8.html
+++ b/src/main/resources/pages/leadz/watches/women/Women-8.html
@@ -23,21 +23,17 @@
 
     <!-- Thumbnails -->
     <div class="thumbs" id="thumbs">
-        <img src="../../../../assets/leadz/watches/women/6/W6-1.jpg" alt="Watch 6" class="active" />
-        <img src="../../../../assets/leadz/watches/women/6/W6-2.jpg" alt="Watch 6" />
-        <img src="../../../../assets/leadz/watches/women/6/W6-9.jpg" alt="Watch 6" />
-        <img src="../../../../assets/leadz/watches/women/6/W6-5.jpg" alt="Watch 6" />
-        <img src="../../../../assets/leadz/watches/women/6/W6-8.jpg" alt="Watch 6" />
-        <img src="../../../../assets/leadz/watches/women/6/W6-6.jpg" alt="Watch 6" />
-        <img src="../../../../assets/leadz/watches/women/6/W6-10.jpg" alt="Watch 6" />
-        <img src="../../../../assets/leadz/watches/women/6/W6-7.jpg" alt="Watch 6" />
+        <img src="../../../../assets/leadz/watches/women/8/W8-4.jpg" alt="Watch 8" class="active" />
+        <img src="../../../../assets/leadz/watches/women/8/W8-2.jpg" alt="Watch 8" />
+        <img src="../../../../assets/leadz/watches/women/8/W8-3.jpg" alt="Watch 8" />
+        <img src="../../../../assets/leadz/watches/women/8/W8-1.jpg" alt="Watch 8" />
 
     </div>
 
     <!-- Main Image with Arrows -->
     <div>
         <div style="position: relative;">
-            <img id="mainImage" src="../../../../assets/leadz/watches/women/6/W6-1.jpg" alt="Main Watch" class="main-image" />
+            <img id="mainImage" src="../../../../assets/leadz/watches/women/8/W8-4.jpg" alt="Main Watch" class="main-image" />
             <button id="prevBtn" class="arrow-btn left">‹</button>
             <button id="nextBtn" class="arrow-btn right">›</button>
 
@@ -62,16 +58,8 @@
         <!-- Color Options with Price -->
         <div class="colors" id="colors">
             <div class="color-option selected" data-price="3,500" data-original="5500.00">
-                <img src="../../../../assets/leadz/watches/women/1/W1-6.jpg" alt="Watch" />
-                <div class="color-label">Silver-Gold-White</div>
-            </div>
-            <div class="color-option" data-price="3,500" data-original="5500.00">
-                <img src="../../../../assets/leadz/watches/women/1/W1-6.jpg" alt="Watch" />
-                <div class="color-label">Silver-Gold-White</div>
-            </div>
-            <div class="color-option" data-price="3,500" data-original="5500.00">
-                <img src="../../../../assets/leadz/watches/women/1/W1-6.jpg" alt="Watch" />
-                <div class="color-label">Silver-Gold-White</div>
+                <img src="../../../../assets/leadz/watches/women/8/W8-2.jpg" alt="Watch" />
+                <div class="color-label">Gold</div>
             </div>
         </div>
 
