--- a/src/main/resources/pages/leadz/watches/women/Women-8.html
+++ b/src/main/resources/pages/leadz/watches/women/Women-8.html
@@ -50,10 +50,10 @@
         </div>
 
         <p class="description">
-            Graceful and chic, the HERYI Ladies Watch adds a touch of sophistication to any look. Packaged in a complimentary, beautifully designed gift box, it’s an ideal choice for a thoughtful present or a luxurious indulgence just for you.
+            Timeless elegance meets modern craftsmanship in this stunning CITIZEN ladies watch. Designed for the sophisticated woman, it features a sleek and refined look that effortlessly complements any outfit—casual or formal.
         </p>
 
-        <div class="brand-label">Brand: HERYI</div>
+        <div class="brand-label">Brand: CITIZEN</div>
 
         <!-- Color Options with Price -->
         <div class="colors" id="colors">
