--- a/src/main/resources/pages/leadz/watches/women/Women-7.html
+++ b/src/main/resources/pages/leadz/watches/women/Women-7.html
@@ -83,6 +83,13 @@
     </div>
 </div>
 
+<!-- Promo Video Section -->
+<div class="promo-video">
+    <video autoplay muted loop playsinline>
+        <source src="../../../../assets/videos/WW1428.mp4" type="video/mp4" />
+        Your browser does not support the video tag.
+    </video>
+</div>
 
 <!-- JavaScript -->
 <script src="../../../../js/js.js"></script>
