--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
           <li><a href="#">Home</a></li>
           <li><a href="src/main/resources/pages/men.html">Mens</a></li>
           <li><a href="src/main/resources/pages/women.html">Womens</a></li>
-          <li><a href="src/main/resources/pages/brands.html">Brandss</a></li>
+          <li><a href="src/main/resources/pages/brands.html">Brands</a></li>
           <li><a href="src/main/resources/pages/bundle.html">Bundles</a></li>
 <!--          <li><a href="src/main/resources/pages/accessories.html">Accessories</a></li>-->
           <li><a href="src/main/resources/pages/cases.html">Boxes</a></li>
